deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svg-trmnl-server
  namespace: trmnl
  labels:
    app: svg-trmnl-server
spec:
  selector:
    app: svg-trmnl-server
  ports:
    - name: http
      port: 9080
      targetPort: http
      protocol: TCP
  type: ClusterIP
